--- a/Project Dasmoto's Arts&Crafts/images/images/index.html
+++ b/Project Dasmoto's Arts&Crafts/images/images/index.html
@@ -26,7 +26,7 @@
         Frames
         </h2>
 
-   >         <figure>
+            <figure>
                  <img src="frames.jpeg">
              </figure>
 
